class Sedan implements Vehicle {
    @Override
    public void move() { System.out.println("Driving a Sedan"); }
}

class SportBike implements Vehicle {
    @Override
    public void move() { System.out.println("Riding a Sport Bike"); }
}