interface VehicleFactory {
    Vehicle createVehicle(String type);
}